// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context should allow changing tag value case 1`] = `
Object {
  "Attributes": "ATTR1,ATTR2",
  "Environment": "SANDBOX",
  "Name": "SERVICE-SANDBOX",
  "Project": "PROJECT",
  "Service": "SERVICE",
}
`;

exports[`Context should be able to dump context with defualts merged 1`] = `
Object {
  "attributes": undefined,
  "delimiter": "-",
  "enabled": true,
  "environment": "sandbox",
  "idLengthLimit": 255,
  "labelKeyCase": "title",
  "labelOrder": Array [
    "service",
    "environment",
    "name",
  ],
  "labelValueCase": "lowercase",
  "labelsAsTags": Array [
    "project",
    "service",
    "environment",
    "name",
  ],
  "name": undefined,
  "organization": "JFenstermacher",
  "project": "project",
  "service": "service",
  "tags": Object {},
}
`;

exports[`Context should filter tags based on labelsAsTags 1`] = `
Object {
  "Name": "service-sandbox",
}
`;

exports[`Context should merge user tags over default tags 1`] = `
Object {
  "Environment": "what",
  "Name": "service-sandbox",
  "Project": "project",
  "Service": "huh",
}
`;

exports[`Context should write labels as tags 1`] = `
Object {
  "Environment": "sandbox",
  "Name": "service-sandbox",
  "Project": "project",
  "Service": "service",
}
`;
